tests/fixtures/invalid/ord_set.py
# Cannot call ord() with Set[int]
x = ord({1, 2, 3})
